import java.text.SimpleDateFormat

plugins {
    id("idea")
    id("java")
    id("application")
    id("maven-publish")
    id("signing")

    id("com.github.ben-manes.versions") version "${versionsPluginVersion}"
}

group = "com.github.dzmipt"

version = projectVersion

compileJava {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    options.compilerArgs += [
            "-Alog4j.graalvm.groupId=${project.group}",
            "-Alog4j.graalvm.artifactId=${project.name}"
    ]
}

run {
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDirs 'src'
        }
        resources {
            srcDirs 'resources','images','imagesOrig'
        }
    }
    test {
        java {
            srcDirs 'test'
        }
        resources {
            srcDir 'test-resources'
        }
    }
    intTest {
        java {
            srcDirs 'test-integration'
        }
        resources {
            srcDirs 'test-resources'
        }
        compileClasspath += main.output
        runtimeClasspath += main.output
    }
}

configurations {
    txtmark
    intTestImplementation.extendsFrom implementation
    intTestRuntimeOnly.extendsFrom runtimeOnly
    intTestCompileOnly.extendsFrom compileOnly
}

dependencies {
    txtmark "com.github.rjeschke:txtmark:${txtmarkVersion}"

    implementation "org.apache.logging.log4j:log4j-api:${log4jVersion}"
    implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
    implementation "org.apache.logging.log4j:log4j-iostreams:${log4jVersion}"
    annotationProcessor "org.apache.logging.log4j:log4j-core:${log4jVersion}"

    implementation "com.fifesoft:rsyntaxtextarea:${rsyntaxtextareaVersion}"
    //see studio.ui.chart.patched folder for the patch for jfreechart.
    // It will require review during the jfreechart upgrade.
    implementation "org.jfree:jfreechart:${jfreechartVersion}"

    implementation "org.apache.poi:poi:${poiVersion}"
    implementation "org.apache.poi:poi-ooxml:${poiVersion}"

    implementation "net.java.dev.jna:jna:${jnaVersion}"
    implementation "org.drjekyll:fontchooser:${fontchooserVersion}"

    implementation "com.google.code.gson:gson:${gsonVersion}"

    implementation "com.formdev:flatlaf:${flatlafVersion}"
    implementation "com.formdev:flatlaf-extras:${flatlafVersion}"

    testImplementation(platform("org.junit:junit-bom:${junitVersion}"))

    testImplementation("org.junit.jupiter:junit-jupiter-api")
    testImplementation("org.junit.jupiter:junit-jupiter-params")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")

    intTestImplementation "org.assertj:assertj-swing-junit:${assertjSwingJunitVersion}"
}

test {
    useJUnitPlatform()
}

tasks.register('integrationTest', Test) {
    dependsOn build
    description = 'Runs integration tests.'
    group = 'verification'

    testClassesDirs = sourceSets.intTest.output.classesDirs
    classpath = sourceSets.intTest.runtimeClasspath
    jvmArgs(
            '--add-opens=java.base/java.util=ALL-UNNAMED',
            '--add-opens=java.desktop/java.awt=ALL-UNNAMED',
            '--add-opens=java.desktop/javax.swing=ALL-UNNAMED',
            '--enable-native-access=ALL-UNNAMED'
    )
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
        showStandardStreams = true
    }
}

application {
    mainClass = 'studio.core.Studio'
}

static def buildTime() {
    def df = new SimpleDateFormat("yyyy.MM.dd HH:mm:ss")
    return df.format(new Date())
}

def getGitRevNumber = { ->
    try {
        def rev = providers.exec {
            commandLine 'git', 'rev-list', '--count', 'HEAD'
        }.standardOutput.asText.get().trim()
        def hash = providers.exec {
            commandLine 'git', 'rev-parse', '--short', 'HEAD'
        }.standardOutput.asText.get().trim()

        return ", commit number: $rev, hash: $hash"
    } catch (Throwable e) {
        println "Error getting git revision: " + e
        println errout.toString()
    }

    return "";
}

def buildFile = layout.projectDirectory.file("resources/build.txt")
def buildTimeProvider = providers.provider { buildTime() }
def gitRevProvider = providers.provider { getGitRevNumber() }

tasks.register('getBuildHash') {
    inputs.property("buildTime", buildTimeProvider)
    inputs.property("gitRev", gitRevProvider)

    outputs.file(buildFile)

    doLast {
        def file = buildFile.getAsFile()
        file.parentFile.mkdirs()
        file.text = "${buildTimeProvider.get()}${gitRevProvider.get()}"
    }
}

tasks.register('convertNotes', JavaExec) {
    mainClass = 'com.github.rjeschke.txtmark.Run'
    classpath = configurations.txtmark
    args 'notes.md'
    standardOutput new FileOutputStream(new File(projectDir, "resources/notes.html"))
}

tasks.register('copyLog4JPluginDat', Copy) {
    dependsOn 'compileJava'
    from 'build/classes/java/main/META-INF'
    into 'resources/META-INF'
}

tasks.register('delBuildLog4JPluginDat', Delete) {
    dependsOn 'copyLog4JPluginDat'
    delete 'build/classes/java/main/META-INF'
}

tasks.register('moveBuildLog4JPluginDat') {
    dependsOn 'copyLog4JPluginDat', 'delBuildLog4JPluginDat'
}

processResources.dependsOn('getBuildHash', 'convertNotes', 'moveBuildLog4JPluginDat')

tasks.register('sourcesJar', Jar) {
    dependsOn 'copyLog4JPluginDat', 'getBuildHash'
    archiveClassifier.set("sources")
    duplicatesStrategy = 'warn'
    from sourceSets.main.allSource
}

javadoc {
    failOnError = false
}

javadoc.options.addStringOption('Xdoclint:none', '-quiet')

tasks.register('javadocJar', Jar) {
    archiveClassifier.set("javadoc")
    from javadoc
}

java {
    withJavadocJar()
    withSourcesJar()
}

def pubUsername = project.findProperty("ossrhUsername") ?: ""
def pubPassword = project.findProperty("ossrhPassword") ?: ""

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            pom {
                name = 'Studio for kdb+'
                packaging = 'jar'
                // optionally artifactId can be defined here
                description = 'Studio for kdb+ is a rapid development environment for the ultra-fast database kdb+ from Kx Systems: http://www.kx.com.'
                url = 'https://github.com/dzmipt/kdbStudio'

                scm {
                    connection = 'git@github.com:dzmipt/kdbStudio.git'
                    developerConnection = 'git@github.com:dzmipt/kdbStudio.git'
                    url = 'https://github.com/dzmipt/kdbStudio'
                }

                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }

                developers {
                    developer {
                        id = 'dzmipt'
                        name = 'Dmitry Zakharov'
                        email = 'dz.mipt@gmail.com'
                    }
                }
            }
        }
    }
    repositories {
        maven {
            url "https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/"
            mavenContent {
                releasesOnly()
            }
            credentials {
                username pubUsername
                password pubPassword
            }
            authentication {
                basic(BasicAuthentication)
            }
        }
    }
}

tasks.register('postPublish', Exec) {
    def url = "https://ossrh-staging-api.central.sonatype.com/manual/upload/defaultRepository/com.github.dzmipt"
    // Encode user:password as Base64
    def token = Base64.encoder.encodeToString("${pubUsername}:${pubPassword}".bytes)

    // Execute curl command
    commandLine 'curl',
            '-X', 'POST',
            url,
            '-H', 'accept: */*',
            '-d', '',
            '--header', "Authorization: Bearer ${token}"
}

// Run postPublish only when publish succeeds
tasks.named('publish') {
    doLast {
        tasks.named('postPublish').get().exec()
    }
}

signing {
    sign publishing.publications.mavenJava
}
